--- a/memefolder/Base.lproj/Main.storyboard
+++ b/memefolder/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="qgV-WN-pDX">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina5_5" orientation="landscape" appearance="dark"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
@@ -15,11 +15,11 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="InitialViewController" customModule="Meme_Folder" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="736" height="414"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="oW2-T9-M9u">
-                                <rect key="frame" x="80" y="48" width="254" height="30"/>
+                                <rect key="frame" x="241" y="4" width="254" height="30"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="akf-17-HIq">
                                         <rect key="frame" x="0.0" y="0.0" width="226" height="30"/>
@@ -38,7 +38,7 @@
                                 </constraints>
                             </stackView>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xFS-UF-c22">
-                                <rect key="frame" x="0.0" y="78" width="414" height="784"/>
+                                <rect key="frame" x="0.0" y="34" width="736" height="380"/>
                             </containerView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -68,11 +68,11 @@
             <objects>
                 <viewController id="qgV-WN-pDX" customClass="PasteLinkViewController" customModule="Meme_Folder" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="aAk-6W-icU">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="736" height="414"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="79j-Kh-fRg">
-                                <rect key="frame" x="59.5" y="704" width="295" height="34"/>
+                                <rect key="frame" x="220.66666666666663" y="276" width="295" height="34"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Paste a Twitter Link Here" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="Ttm-hl-xqF">
                                         <rect key="frame" x="0.0" y="0.0" width="240" height="34"/>
@@ -100,18 +100,18 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lYp-zn-qI2">
-                                <rect key="frame" x="152" y="762" width="110" height="31"/>
+                                <rect key="frame" x="313" y="334" width="110" height="31"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Paste and Go"/>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;Status Label&gt;" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rlq-Ow-YxN">
-                                <rect key="frame" x="149.5" y="659.5" width="115.5" height="20.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rlq-Ow-YxN">
+                                <rect key="frame" x="368" y="252" width="0.0" height="0.0"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qct-0C-2xc">
-                                <rect key="frame" x="48.5" y="432" width="317" height="31"/>
+                                <rect key="frame" x="209.66666666666663" y="179" width="317" height="31"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Populate Clipboard (test suspended account)"/>
                                 <connections>
@@ -119,38 +119,103 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JnS-e5-m4h">
-                                <rect key="frame" x="74.5" y="544" width="265" height="31"/>
+                                <rect key="frame" x="235.66666666666663" y="220" width="265" height="31"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Populate Clipboard (test WALTER gif)"/>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Starter GIFs" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Eb9-ca-Bob">
+                                <rect key="frame" x="322.66666666666669" y="28" width="91" height="20.666666666666671"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tuh-dd-4f4" customClass="ExampleButton" customModule="Meme_Folder" customModuleProvider="target">
+                                <rect key="frame" x="8" y="56.666666666666657" width="172" height="36.333333333333343"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qmr-wc-Sge" customClass="ExampleButton" customModule="Meme_Folder" customModuleProvider="target">
+                                <rect key="frame" x="188" y="56.666666666666657" width="172" height="36.333333333333343"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zVe-F0-JES" customClass="ExampleButton" customModule="Meme_Folder" customModuleProvider="target">
+                                <rect key="frame" x="368" y="56.666666666666657" width="172" height="36.333333333333343"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ipq-X1-8is" customClass="ExampleButton" customModule="Meme_Folder" customModuleProvider="target">
+                                <rect key="frame" x="548" y="56.666666666666657" width="172" height="36.333333333333343"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="udS-S4-Uhe"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="lYp-zn-qI2" firstAttribute="top" secondItem="Ttm-hl-xqF" secondAttribute="bottom" constant="24" id="0Mv-2J-kVY"/>
-                            <constraint firstItem="udS-S4-Uhe" firstAttribute="bottom" secondItem="lYp-zn-qI2" secondAttribute="bottom" constant="20" id="1aD-QP-tj6"/>
+                            <constraint firstItem="udS-S4-Uhe" firstAttribute="bottom" secondItem="lYp-zn-qI2" secondAttribute="bottom" id="1aD-QP-tj6"/>
+                            <constraint firstItem="zVe-F0-JES" firstAttribute="top" secondItem="tuh-dd-4f4" secondAttribute="bottom" constant="7.5" id="1hk-0c-rzO"/>
+                            <constraint firstItem="qmr-wc-Sge" firstAttribute="leading" secondItem="tuh-dd-4f4" secondAttribute="trailing" constant="8" symbolic="YES" id="5aH-ZL-Roe"/>
+                            <constraint firstItem="tuh-dd-4f4" firstAttribute="width" secondItem="ipq-X1-8is" secondAttribute="width" id="5td-qZ-avJ"/>
                             <constraint firstItem="udS-S4-Uhe" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="79j-Kh-fRg" secondAttribute="trailing" constant="8" id="6FT-Pa-nRj"/>
+                            <constraint firstItem="tuh-dd-4f4" firstAttribute="width" secondItem="udS-S4-Uhe" secondAttribute="width" multiplier="0.5" constant="-12" id="7dD-g3-8df"/>
                             <constraint firstItem="Rlq-Ow-YxN" firstAttribute="centerX" secondItem="udS-S4-Uhe" secondAttribute="centerX" id="8ef-dY-WSf"/>
+                            <constraint firstItem="Eb9-ca-Bob" firstAttribute="top" secondItem="udS-S4-Uhe" secondAttribute="top" constant="28" id="9Ca-GX-JcS"/>
                             <constraint firstItem="79j-Kh-fRg" firstAttribute="centerX" secondItem="udS-S4-Uhe" secondAttribute="centerX" id="EOU-l5-lxs"/>
+                            <constraint firstItem="tuh-dd-4f4" firstAttribute="width" secondItem="zVe-F0-JES" secondAttribute="width" id="GAu-7g-0dG"/>
+                            <constraint firstItem="zVe-F0-JES" firstAttribute="top" secondItem="ipq-X1-8is" secondAttribute="top" id="Jbw-JI-U4x"/>
                             <constraint firstItem="udS-S4-Uhe" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Rlq-Ow-YxN" secondAttribute="trailing" constant="8" id="R3m-um-cwy"/>
                             <constraint firstItem="79j-Kh-fRg" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="udS-S4-Uhe" secondAttribute="leading" constant="8" id="RRw-Uk-X6f"/>
                             <constraint firstItem="JnS-e5-m4h" firstAttribute="centerX" secondItem="udS-S4-Uhe" secondAttribute="centerX" id="RWd-gh-VZY"/>
                             <constraint firstItem="Qct-0C-2xc" firstAttribute="centerX" secondItem="udS-S4-Uhe" secondAttribute="centerX" id="Rjg-H2-lnD"/>
+                            <constraint firstItem="tuh-dd-4f4" firstAttribute="width" secondItem="udS-S4-Uhe" secondAttribute="width" multiplier="0.25" constant="-12" id="Twl-pt-fiK"/>
                             <constraint firstItem="Qct-0C-2xc" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="udS-S4-Uhe" secondAttribute="leading" constant="48.5" id="VPQ-2V-weh"/>
                             <constraint firstItem="lYp-zn-qI2" firstAttribute="centerX" secondItem="udS-S4-Uhe" secondAttribute="centerX" id="XB4-kd-WQa"/>
-                            <constraint firstItem="Rlq-Ow-YxN" firstAttribute="top" secondItem="JnS-e5-m4h" secondAttribute="bottom" constant="84.5" id="aAN-dJ-2sc"/>
+                            <constraint firstItem="Rlq-Ow-YxN" firstAttribute="top" secondItem="JnS-e5-m4h" secondAttribute="bottom" constant="1" id="aAN-dJ-2sc"/>
+                            <constraint firstItem="tuh-dd-4f4" firstAttribute="top" secondItem="Eb9-ca-Bob" secondAttribute="bottom" constant="8" symbolic="YES" id="ahY-Z6-wgV"/>
+                            <constraint firstItem="zVe-F0-JES" firstAttribute="leading" secondItem="tuh-dd-4f4" secondAttribute="leading" id="cBp-vr-aBE"/>
+                            <constraint firstItem="qmr-wc-Sge" firstAttribute="top" secondItem="Eb9-ca-Bob" secondAttribute="bottom" constant="8" symbolic="YES" id="ctA-7l-Q7W"/>
+                            <constraint firstItem="ipq-X1-8is" firstAttribute="leading" secondItem="zVe-F0-JES" secondAttribute="trailing" constant="8" id="d3U-rW-hfG"/>
                             <constraint firstItem="udS-S4-Uhe" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Qct-0C-2xc" secondAttribute="trailing" constant="48.5" id="dd3-0T-btz"/>
+                            <constraint firstItem="tuh-dd-4f4" firstAttribute="width" secondItem="qmr-wc-Sge" secondAttribute="width" id="gGu-ib-z1C"/>
                             <constraint firstItem="udS-S4-Uhe" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="JnS-e5-m4h" secondAttribute="trailing" constant="20" id="ivC-3v-ruP"/>
+                            <constraint firstItem="tuh-dd-4f4" firstAttribute="leading" secondItem="udS-S4-Uhe" secondAttribute="leading" constant="8" id="jwC-Lj-P4Z"/>
                             <constraint firstItem="Rlq-Ow-YxN" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="udS-S4-Uhe" secondAttribute="leading" constant="8" id="mwt-cM-hgV"/>
-                            <constraint firstItem="JnS-e5-m4h" firstAttribute="top" secondItem="Qct-0C-2xc" secondAttribute="bottom" constant="81" id="rWT-MP-9bg"/>
+                            <constraint firstItem="JnS-e5-m4h" firstAttribute="top" secondItem="Qct-0C-2xc" secondAttribute="bottom" constant="10" id="rWT-MP-9bg"/>
+                            <constraint firstItem="zVe-F0-JES" firstAttribute="top" secondItem="qmr-wc-Sge" secondAttribute="top" id="rlL-Ep-GDA"/>
+                            <constraint firstItem="zVe-F0-JES" firstAttribute="leading" secondItem="qmr-wc-Sge" secondAttribute="trailing" constant="8" id="sUb-yC-sWt"/>
+                            <constraint firstItem="Eb9-ca-Bob" firstAttribute="centerX" secondItem="udS-S4-Uhe" secondAttribute="centerX" id="u4s-sm-m5U"/>
                             <constraint firstItem="Ttm-hl-xqF" firstAttribute="top" secondItem="Rlq-Ow-YxN" secondAttribute="bottom" constant="24" id="ukw-6T-m76"/>
                             <constraint firstItem="JnS-e5-m4h" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="udS-S4-Uhe" secondAttribute="leading" constant="20" id="xBi-EA-C4S"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="7dD-g3-8df"/>
+                                <exclude reference="Twl-pt-fiK"/>
+                                <exclude reference="1hk-0c-rzO"/>
+                                <exclude reference="cBp-vr-aBE"/>
+                                <exclude reference="rlL-Ep-GDA"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="constraints">
+                                <include reference="7dD-g3-8df"/>
+                                <include reference="1hk-0c-rzO"/>
+                                <include reference="cBp-vr-aBE"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=regular">
+                            <mask key="constraints">
+                                <include reference="Twl-pt-fiK"/>
+                                <include reference="rlL-Ep-GDA"/>
+                            </mask>
+                        </variation>
                     </view>
                     <tabBarItem key="tabBarItem" title="Paste a Link" image="link" catalog="system" id="y2A-HK-anu"/>
                     <connections>
                         <outlet property="bottomLayoutConstraint" destination="1aD-QP-tj6" id="Opz-Sn-NSW"/>
                         <outlet property="copyExampleTwitterLinkButton" destination="JnS-e5-m4h" id="C1g-dd-51a"/>
+                        <outlet property="example1" destination="tuh-dd-4f4" id="fRo-l4-ov9"/>
+                        <outlet property="example2" destination="qmr-wc-Sge" id="jir-6O-lJB"/>
+                        <outlet property="example3" destination="zVe-F0-JES" id="ya5-F3-mKb"/>
+                        <outlet property="example4" destination="ipq-X1-8is" id="5jx-cP-gk6"/>
                         <outlet property="goButton" destination="J1d-Vr-VWp" id="DC1-uO-a7P"/>
                         <outlet property="pasteAndGoButton" destination="lYp-zn-qI2" id="akI-X4-drR"/>
                         <outlet property="statusLabel" destination="Rlq-Ow-YxN" id="scs-bF-ZBS"/>
@@ -159,7 +224,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SbX-Ql-leY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1071.0144927536232" y="551.11607142857144"/>
+            <point key="canvasLocation" x="1070.625" y="550"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="34A-jO-Qvp">
